<resources>
    <string name="app_name">TripAdvisor_SignIn</string>
    <string name="dest_icon_name">Destinations</string>
    <string name="route_map_name">Route</string>
    <string name="preferences_list_name">Preferences</string>
    <string name="friends_list_name">Friends</string>
    <string name="account_login_name">Account</string>
    <string name="title_activity_map">Route</string>
    <string name="title_activity_account">Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
